small spacing corrections

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16446,7 +16446,7 @@ body.understrap-no-sidebar .wp-block-cover.alignwide {
   }
 }
 
-.simple-header .lead {
+.simple-banner .lead {
   color: #FFC259;
 }
 
