--- a/src/sass/theme/partials/_simple-header.scss
+++ b/src/sass/theme/partials/_simple-header.scss
@@ -1,6 +1,5 @@
-.simple-header {
+.simple-banner {
   .lead {
     color: $yellow;
   }
-  
 }
